Init ksul theme changes

--- a/app/assets/stylesheets/_colors.scss
+++ b/app/assets/stylesheets/_colors.scss
@@ -4,8 +4,8 @@
 /* Duke Branding Guide colors        */
 /* https://brand.duke.edu/colors/    */
 /* ================================= */
-$duke-navy-blue:  #012169 !default;
-$duke-royal-blue: #00539b !default;
+$duke-navy-blue:  #512888 !default;
+$duke-royal-blue: #512888 !default;
 $copper:          #c84e00 !default;
 $persimmon:       #e89923 !default;
 $dandelion:       #ffd960 !default;
@@ -28,7 +28,7 @@ $limestone:       #e5e5e5 !default;
 /* ================================= */
 /* DUL website colors (dulcet theme) */
 /* ================================= */
-$dul-masthead-blue:     #053482 !default;
+$dul-masthead-blue:     #512888 !default;
 $dul-dulcet-lightblue:  #235f9c !default;
 $dul-dulcet-green:      #a1b70d !default;
 $dul-dulcet-orange:     #f09905 !default;
@@ -53,7 +53,7 @@ $white: #ffffff !default;
 /* vs. white (required by WCAG AA). */
 $text-muted: #767676 !important;
 
-$link-color: #004CCC;
+$link-color: #512888;
 $default-border-color: $gray-200;
 
 /* Bootstrap 5 $theme-colors */
