--- a/app/components/homepage_component.html.erb
+++ b/app/components/homepage_component.html.erb
@@ -31,13 +31,6 @@
         <%= render 'shared/search_extra_controls' %>
 
       </div>
-      <div class="rl-banner-wrap">
-        <hr class="extended-divider mt-3" />
-        <a class="rl-banner d-inline-flex align-items-center mb-3" href="https://library.duke.edu/rubenstein">
-          <%= image_tag asset_url('dul-logos/rl-logo-white.png'), alt: 'Rubenstein Logo', class: 'rl-logo' %>
-          <div class="rl-fullname">David M. Rubenstein Rare <br class="rl-break"/>Book &amp; Manuscript Library</div>
-        </a>
-      </div>
     </div>
   </div>
 </div>
@@ -64,7 +57,7 @@
       <p>Not all of the Rubenstein's collections are described on this site. <a href="https://find.library.duke.edu/?f_inclusive%5Blocation_hierarchy_f%5D%5B%5D=duke%3Adukeruby&amp;f_inclusive%5Blocation_hierarchy_f%5D%5B%5D=duke%3Adukeunis&amp;search_field=all_fields&amp;q=&amp;f%5Blocation_hierarchy_f%5D%5B%5D=" class="underlined-link">Search the catalog</a> to find additional manuscripts, rare books, and other items held in the Rubenstein.</p>
 
       <h2><%= t('dul_arclight.home.ask.heading') %></h2>
-      <p>Need help or have questions? <a href="<%= helpers.ask_rubenstein_url %>" class="underlined-link">Contact a librarian or archivist</a> for more information.</p>
+      <p>Need help or have questions? Contact a librarian or archivist for more information.</p>
     </div>
   </div>
 </div>
