fixed https and few changes reg links

--- a/app/views/shared/_mobile_menu.html.erb
+++ b/app/views/shared/_mobile_menu.html.erb
@@ -1,7 +1,7 @@
 <%# Combine top-level nav links from repository menu bar & the DUL shared mast %>
 <%# into one, so we have only one hamburger menu. %>
 <div id="mobile-only-menu" class="collapse navbar-collapse">
-  <nav id="mobile-only-menu-nav" class="navbar navbar-expand-lg navbar-dark">
+  <nav id="mobile-only-menu-nav" class="navbar navbar-expand-lg navbar-dark" hide=true>
     <div class="container">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item flex-fill flex-grow-1">
@@ -24,10 +24,10 @@
           <a class="nav-link" href="https://library.duke.edu/course-support">Course Support</a>
         </li>
         <li class="nav-item flex-fill">
-          <a class="nav-link" href="https://library.duke.edu/libraries">Libraries</a>
+          <a class="nav-link" href="https://lib.k-state.edu/">Libraries</a>
         </li>
         <li class="nav-item flex-fill">
-          <a class="nav-link" href="https://library.duke.edu/about">About</a>
+          <a class="nav-link" href="https://lib.k-state.edu/">About</a>
         </li>
       </ul>
     </div>
