--- a/app/assets/stylesheets/_show.scss
+++ b/app/assets/stylesheets/_show.scss
@@ -53,6 +53,7 @@ section.show-document {
 }
 
 #using-these-materials-teaser {
+  display: none;
   width: 33%;
   background: $whisper-gray;
   border-left: 8px solid $dandelion;
@@ -65,6 +66,7 @@ section.show-document {
 }
 
 #using-these-materials {
+  display: none;
   background: $whisper-gray;
   border-bottom: 8px solid $dandelion;
   padding: 1.5rem;
